--- a/guide/guide.tex
+++ b/guide/guide.tex
@@ -379,9 +379,9 @@ These tools to quantify model fit then inform the important choice of which cons
 
 
 \section{Conclusion}
-Science is a process of model selection. In the ideal picture, we start with the simplest models and the fewest constraints possible, and then we increase the complexity of the model til it is sufficiently so to make good predictions. In principle, we could add as many contraints as would allow us to fit the data well, but the idea is that complex models are not only ``expensive'' but they do not generalize well.
-Maxent is a principled framework for this picture of model building. The number of parameters and the order of the constraints we impose can be adjusted to test our hypotheses about what matters for the system.
-In this sense, the maxent approach is a useful ``model'' framework for thinking about statistical inference problems far beyond statistical physics. We build an open-source Python package that we hope will be accessible and useful for those unfamiliar with maxent approaches to experiment and perhaps apply this technique to their questions.
+Science is a process of model selection. In the ideal picture, we start with the simplest models and the fewest constraints possible, and then we increase the complexity of the model til it is sufficiently so to make good predictions. In principle, we could add as many contraints as would allow us to fit the data well, but complex models are more computationally expensive and often do not generalize well.
+Maxent is a principled framework for this picture of model building. The number of parameters and the order of the constraints we impose can be adjusted to test our hypotheses about what matters most for recreating a system's behavior.
+In this sense, the maxent approach is a useful framework for statistical inference problems far beyond statistical physics.  We have built CONIII as an easily accessible software package in the hopes that it will inspire those unfamiliar with maxent approaches to experiment and apply this technique to their own research questions.
 
 
 %\section{The microcanonical ensemble and maximum entropy}
